compiler/testData/diagnostics/tests/annotations/DanglingInScript.fir.kts
// FILE: script.kts

annotation class Ann

@<!UNRESOLVED_REFERENCE!>Ann<!><!SYNTAX!><!>
